--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -115,11 +115,11 @@
     padding-top: 15px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     .thumbs{
         float: left;
-        width: 31%;
-        flex-basis: 31%;
+        width: calc(33.3333333333% - 10px);
+        flex-basis: 30%;
         min-height: 60px;
         border: 1px solid $border;
         @include border-radius(4px);        
@@ -127,6 +127,8 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
+        margin-left: 5px;
+        margin-right: 5px;
         .thumb{
             width: 100%;
             height: 100%;
