--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -221,9 +221,16 @@ ul.simple-list
         justify-content: space-between
         li
             float: left
+            width: 48%
+            height: 45px
+            background-repeat: no-repeat
+            -moz-background-size: cover
+            -o-background-size: cover
+            background-size: cover
+            background-position: center center
+            @include border-radius(5px)
             img
-                width: 100%
-                @include border-radius(5px)
+                max-width: 100%
             
 .msg-bottom
     width: 100%
