header and footer update for mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -47,6 +47,7 @@
 @import "3-component/search.scss";
 @import "3-component/_slickslider.scss";
 @import "3-component/pagination.scss";
+@import "3-component/mobile-head.scss";
 
 // 4 -Pages
 //---------------------------------------------------
