--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7669,7 +7669,7 @@ a {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ffffff", endColorstr="#dfe4e8", GradientType=0);
 }
 
-.upload-gradient, .search-tab li a, .upload-container {
+.upload-gradient, .mobile-footer, .search-tab li a, .upload-container {
   background: #dadde0;
   /* Old browsers */
   background: -moz-linear-gradient(top, #dadde0 0%, #9db3c4 100%);
@@ -13104,6 +13104,91 @@ ul.simple-list li:last-of-type {
   border-radius: 5px !important;
   -webkit-border-radius: 5px !important;
   -moz-border-radius: 5px !important;
+}
+
+.mobile-head {
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 56px;
+  background: #00C4E8;
+}
+
+.menu-bar {
+  float: left;
+  flex-basis: 25%;
+}
+.menu-bar button {
+  background: transparent;
+  border: 0px;
+  color: #fff;
+  font-size: 20px;
+  margin-left: 15px;
+}
+
+.mobile-logo {
+  width: auto;
+  max-width: 150px;
+}
+.mobile-logo img {
+  height: 36px;
+}
+
+.menu-right {
+  flex-basis: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.menu-right i {
+  font-size: 20px;
+  color: #fff;
+}
+.menu-right .search-wrapper input {
+  display: none;
+}
+
+.app-content {
+  width: 100%;
+  float: left;
+  padding-top: 59px;
+}
+
+.mobile-footer {
+  width: 100%;
+  height: 59px;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  display: flex;
+  align-items: center;
+}
+.mobile-footer ul {
+  width: 100%;
+  height: 100%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 0px;
+}
+.mobile-footer ul li {
+  flex-basis: 20%;
+  height: 100%;
+  float: left;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.mobile-footer ul li .mob-home {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border: 1px solid #fff;
 }
 
 .form-group {
