--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13152,12 +13152,13 @@ ul.simple-list li:last-of-type {
   display: none;
 }
 
-.app-content {
-  width: 100%;
-  float: left;
-  padding-top: 59px;
+@media (max-width: 900px) {
+  .app-content {
+    width: 100%;
+    float: left;
+    padding-top: 59px;
+  }
 }
-
 .mobile-footer {
   width: 100%;
   height: 59px;
