--- a/assets/sass/3-component/_mobile-head.scss
+++ b/assets/sass/3-component/_mobile-head.scss
@@ -46,10 +46,12 @@
     }
 }
 
-.app-content{
-    width: 100%;
-    float: left;
-    padding-top: 59px;
+@media (max-width: 900px){
+    .app-content{
+        width: 100%;
+        float: left;
+        padding-top: 59px;
+    }
 }
 
 .mobile-footer{
