--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7753,6 +7753,10 @@ a {
   padding: 75px 75px 0px !important;
 }
 
+.pl-5 {
+  padding-left: 5px !important;
+}
+
 .m-0 {
   margin: 0px !important;
 }
