--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -101,6 +101,13 @@
     }
 }
 
+.price-group{
+    width: auto;
+    float: left;
+    display: inline-flex;
+    align-items: center;
+}
+
 .price{
     float: left;
     color: $black;
