--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -152,6 +152,8 @@ a
 .border
   border: 1px solid
   border-color: $border
+.bt-1
+  border-top: 1px solid $border
 
 .flex-center
   display: flex
