--- a/components/index.html
+++ b/components/index.html
@@ -1480,6 +1480,168 @@
             </div>
         </div>
 
+
+        <!-- Modals -->
+        <div class="row mb-20 mt-20">
+            <div class="col-lg-12 col-md-12">
+                <h4>Modals</h4>
+                <div class="modal-wrapper">
+                    <div class="custom-modal">
+                        <!-- Modal title -->
+                        <div class="custom-modal-title modal-green">
+                            <div class="row flex-center">
+                                <div class="col-lg-4 col-md-4">
+                                    <h3>Event Registration Form</h3>
+                                </div>
+                                <div class="col-lg-4 col-md-4 ml-15">
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="custom-modal-body">
+                            <div class="row">
+
+                                <div class="col-lg-4 col-md-4 br-1">
+                                    <div class="modal-left">
+                                        <div class="notes">
+                                            <p>NOTE: The is a <span class="success bold">Tripartite Standard Agreement</span> form to protect both parties against any issues in the future. Read for more info <span class="success bold">here</span>.</p>
+                                            <div class="form-group mt-30 mb-0">
+                                                <input class="magic-checkbox"
+                                                type="checkbox"
+                                                name="layout"
+                                                id="note-s"
+                                                value="option"
+                                                />
+                                                <label class="text font-s" for="note-s">Read and agreed to the TSA Protection Scheme</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group mt-30 mb-0">
+                                            <label class="control-label">Add Images</label>
+                                        </div>
+                                        <div class="upload-container upload-wrapper">
+                                            <div class="upload-inner">
+                                                <div class="icon-container">
+                                                    <div class="img-holder"><img src="./../assets/img/upload.png" title="upload" /></div>
+                                                    <div class="img-holder"><img src="./../assets/img/video.png" title="upload" /></div>
+                                                    <div class="img-holder"><img src="./../assets/img/camera.png" title="upload" /></div>
+                                                </div>
+                                                <div class="upload-content">
+                                                    Add images, video from the web or take photos to upload to your page
+                                                </div>
+                                            </div>
+                                            <input type="file" class="upload-file" />
+                                        </div>
+                                        <div class="upload-info"><i class="fa fa-info-circle"></i> Up to 6 representative Image and video</div>
+
+                                        <div class="form-group mt-30 mb-0">
+                                            <label class="control-label">Embeded Media</label>
+                                        </div>
+
+                                        <div class="form-group flex-center-space mb-0">
+                                            <input type="text" class="form-control" placeholder="Embed video URL" />
+                                            <input type="button" class="btn silver-btn ml-20" value="Add" />
+                                        </div>
+
+                                        <div class="thumb-wrapper mt-30">
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb active" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs"><div class="add-thumb">+</div></div>
+                                        </div>
+                                        <div class="upload-info success mt-0"><i class="fa fa-info-circle"></i> e.g Newly refurbished room for 2 people</div>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="modal-right">
+
+                                        <div class="form-group mb-0">
+                                            <label class="control-label">Event Title</label>
+                                            <p>Event Test It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various</p>
+                                        </div>
+
+                                        <div class="form-row mt-20">
+                                            <div class="form-column flex-top-space">
+                                                <div class="form-group">
+                                                    <label class="control-label">Start date</label>
+                                                    <input type="text" class="form-control" placeholder="16-03-2018" />
+                                                </div>
+                                            </div>
+                                            <div class="form-column flex-top-space ml-30">
+                                                <div class="form-group">
+                                                    <label class="control-label">End date</label>
+                                                    <input type="text" class="form-control" placeholder="16-06-2018" />
+                                                </div>
+                                            </div>
+                                            <div class="form-column flex-top-space ml-30">
+                                                <div class="form-group">
+                                                    <label class="control-label">Start Time</label>
+                                                    <input type="text" class="form-control" placeholder="16-03-2018" />
+                                                </div>                                                
+                                            </div>
+                                            <div class="form-column flex-top-space ml-30">
+                                                <div class="form-group">
+                                                    <label class="control-label">End Time</label>
+                                                    <input type="text" class="form-control" placeholder="16-06-2018" />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-row mt-15">
+                                            <div class="form-column flex-top-space">
+                                                <div class="form-group">
+                                                    <label class="control-label">Price</label>
+                                                    <div class="price-group">
+                                                        <div class="price">$30</div>
+                                                        <div class="price-sub">Per Hour</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+            
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="custom-modal-footer text-right">
+                            <a class="btn danger-btn" href="#">Cancel</a>
+                            <a href="#" class="btn success-btn ml-30">Publish Item</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer content -->
