--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -180,7 +180,8 @@ ul.simple-list
 .right-no-project
     width: 100%
     float: left
-    min-height: calc(100vh - 130px)
+    // min-height: calc(100vh - 130px)
+    min-height: 430px
     position: relative
     .empty-msg
         width: 100%
@@ -266,8 +267,8 @@ ul.simple-list
     left: 50%
     transform: translateX(-50%)
     cursor: pointer
-    svg
-        width: 30px
+    svg, img
+        width: 40px
 
 .post-content
     width: 100%
