--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -206,15 +206,15 @@ a
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa15c', endColorstr='#ff6d41', GradientType=0)
 
 .silver-gradient
-  background: rgb(255, 255, 255)
+  background: rgb(255, 255, 255) !important
   /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%)
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%) !important
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%)
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%) !important
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%)
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(223, 228, 232, 1) 100%) !important
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dfe4e8', GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dfe4e8', GradientType=0) !important
 
 .upload-gradient
   background: rgb(218, 221, 224)
