--- a/assets/sass/3-component/_footer.scss
+++ b/assets/sass/3-component/_footer.scss
@@ -5,7 +5,7 @@
     .footer-top{
         width: 100%;
         float: left;
-        padding: 50px 0;
+        padding: 50px 7px;
         background: $secondary-color;
         img{
             max-height: 40px;
@@ -36,7 +36,7 @@
     .footer-bottom{
         width: 100%;
         float: left;
-        padding: 20px 0;
+        padding: 20px 7px;
         background: $default;
         .follow{
             i{
