--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7652,16 +7652,16 @@ a {
 .orange-gradient, .search-tab li a:hover, .search-tab li a.active, .custom-modal .custom-modal-title.modal-orange, .secondary-btn:hover, .secondary-btn, .alert-orange {
   background: #ffa15c !important;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #ffa15c 1%, #ff6d41 100%) !important;
+  background: -moz-linear-gradient(top, #ffa15c 1%, #ff6d41 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #ffa15c 1%, #ff6d41 100%) !important;
+  background: -webkit-linear-gradient(top, #ffa15c 1%, #ff6d41 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #ffa15c 1%, #ff6d41 100%) !important;
+  background: linear-gradient(to bottom, #ffa15c 1%, #ff6d41 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ffa15c", endColorstr="#ff6d41", GradientType=0) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ffa15c", endColorstr="#ff6d41", GradientType=0);
 }
 
-.silver-gradient, .pagination li:first-of-type a, .pagination li:last-of-type a, .pagination li a, .custom-modal .ui-select-bootstrap .form-control, .custom-modal .custom-modal-title.modal-gray, .sender .chat-btn, .silver-btn:hover, .silver-btn, .accordion-label {
+.silver-gradient, .pagination li a, .custom-modal .ui-select-bootstrap .form-control, .custom-modal .custom-modal-title.modal-gray, .sender .chat-btn, .silver-btn:hover, .silver-btn, .accordion-label {
   background: white !important;
   /* Old browsers */
   background: -moz-linear-gradient(top, white 0%, #dfe4e8 100%) !important;
@@ -13095,13 +13095,14 @@ ul.simple-list li:last-of-type {
   border-color: #B0B6BC !important;
   color: #fff !important;
 }
-.pagination li:hover a, .pagination li.active a {
-  background: #B0B6BC;
-  color: #fff;
+.pagination li.active a, .pagination li.active a:hover, .pagination li.active a:focus {
+  background: #B0B6BC !important;
   border-color: #B0B6BC !important;
+  color: #fff !important;
 }
-.pagination li:first-of-type a, .pagination li:last-of-type a {
-  color: #5B616A;
+.pagination li.next a:focus, .pagination li.prev a:focus {
+  background: transparent !important;
+  color: #344051 !important;
 }
 .pagination li:first-of-type i {
   margin-right: 8px;
