--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -20,6 +20,7 @@
 		margin-bottom: 5px
 		text-transform: uppercase
 		text-align: left
+		padding-top: 0px !important
 	.label-img
 		padding: 5px
 		border: 1px solid $border
