--- a/components/index.html
+++ b/components/index.html
@@ -697,8 +697,36 @@
                 <button type="button" class="btn default-btn" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
                 <button type="button" class="btn default-btn" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
                 <button type="button" class="btn default-btn" data-toggle="tooltip" data-placement="right" title="All widgets, menus and top bar are equiped with resizable setting.">Tooltip on right</button>
+           </div>
+        </div>
+
+        <div class="row mb-50 mt-20">
+            <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
+                
+                <div class="relative right">
+                    
+                    <!-- Use only this -->
+                    <div class="custom-tooltip tooltip-left">
+                        <div class="custom-tooltip-inner">
+                            Tooltip on left
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="relative left">
+
+                    <!-- Use only this -->
+                    <div class="custom-tooltip tooltip-right">
+                        <div class="custom-tooltip-inner">
+                            Tooltip on right
+                        </div>                    
+                    </div>
+
+                </div>
             </div>
         </div>
+
 
         <div class="row mt-20">
             <div class="col-lg-12 col-md-12">
