--- a/assets/sass/3-component/_modal.sass
+++ b/assets/sass/3-component/_modal.sass
@@ -22,7 +22,7 @@
     background: $white
     @include box-shadow($box-shadow-default)
     @include border-radius(5px)
-    margin: 10px auto
+    margin: 0px auto !important
 
 // custom modal
 .modal-dialog-content
