--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7661,7 +7661,7 @@ a {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ffa15c", endColorstr="#ff6d41", GradientType=0);
 }
 
-.silver-gradient, .pagination li a, .custom-modal .ui-select-bootstrap .form-control, .custom-modal .custom-modal-title.modal-gray, .sender .chat-btn, .silver-btn:hover, .silver-btn, .accordion-label {
+.silver-gradient, .pagination li.next a:focus, .pagination li.prev a:focus, .pagination li a, .custom-modal .ui-select-bootstrap .form-control, .custom-modal .custom-modal-title.modal-gray, .sender .chat-btn, .silver-btn:hover, .silver-btn, .accordion-label {
   background: white !important;
   /* Old browsers */
   background: -moz-linear-gradient(top, white 0%, #dfe4e8 100%) !important;
@@ -9319,6 +9319,18 @@ i.color-btn {
   width: 100%;
   float: left;
   margin-top: 5px;
+  /* autoprefixer: off */
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  display: -moz-box;
+  -webkit-line-clamp: 2;
+  -moz-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 50px;
+  min-height: 40px;
 }
 .card .card-content .word-line {
   min-height: 40px;
@@ -11486,7 +11498,12 @@ i.color-btn {
 }
 
 .modal-open {
-  overflow: auto;
+  height: 100vh;
+  overflow: hidden;
+  padding-right: 15px;
+}
+.modal-open .home-header {
+  padding-right: 15px;
 }
 
 .modal-content {
@@ -11494,11 +11511,18 @@ i.color-btn {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   border: 0px;
+  width: 100%;
+  float: left;
+  margin: 20px 0;
 }
 
 .form-modal {
   width: 90% !important;
   max-width: 1200px;
+}
+
+.modal-dialog {
+  margin: 0px auto !important;
 }
 
 .custom-modal {
@@ -13141,8 +13165,8 @@ ul.simple-list li:last-of-type {
   color: #fff !important;
 }
 .pagination li.next a:focus, .pagination li.prev a:focus {
-  background: transparent !important;
-  color: #344051 !important;
+  color: #5B616A !important;
+  border-color: #B0B6BC !important;
 }
 .pagination li:first-of-type i {
   margin-right: 8px;
@@ -13671,8 +13695,8 @@ input:checked + .slider:before {
 
 .signin-modal {
   position: fixed;
-  top: 30px;
-  right: 15px;
+  top: 60px;
+  right: 30px;
 }
 
 .cookie-active .signin-modal {
