--- a/assets/sass/3-component/_pagination.scss
+++ b/assets/sass/3-component/_pagination.scss
@@ -25,8 +25,9 @@
         &.next, &.prev{
             a{
                 &:focus{
-                    background: transparent !important;
-                    color: $black !important;
+                    @extend .silver-gradient;
+                    color: $deep-blue !important;
+                    border-color: $pagination-active !important;
                 }
             }
         }
