--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -18,7 +18,7 @@
 		font-weight: $font-medium
 		z-index: 10
 		margin-bottom: 5px
-		text-transform: uppercase
+		text-transform: capitalize
 		text-align: left
 		padding-top: 0px !important
 	.label-img
