--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -190,6 +190,9 @@ a
   align-items: center
   justify-content: flex-end
   
+.flex-basis-50
+  flex-basis: 50% !important
+
 @media (max-width: 768px)
   .flex-center, .inline-flex-center, .flex-center-space, .flex-center-right, .flex-center-space-around
     display: block
