--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -205,6 +205,19 @@
 		margin: 0 30px
 		&.m-0
 			margin: 0px
+		.alert-count
+			width: 15px
+			height: 15px
+			display: inline-flex
+			align-items: center
+			justify-content: center
+			@include border-radius(50%)
+			background: $danger
+			color: $white
+			font-size: $font-xs
+			position: absolute
+			top: -5px
+			right: -5px
 		svg
 			min-width: 25px
 			min-height: 25px
