--- a/components/index.html
+++ b/components/index.html
@@ -178,6 +178,11 @@
                     <label class="control-label">Label name</label>
                     <input type="text" class="form-control" placeholder="form value" />
                 </div>
+                <div class="form-group">
+                    <label class="control-label">Label name</label>
+                    <input type="text" class="form-control input-with-icon" placeholder="form value" />
+                    <span class="input-icon"><i class="fa fa-calendar"></i></span>
+                </div>
                 <div class="form-group disabled-input">
                     <label class="control-label">Label name</label>
                     <input type="text" class="form-control" placeholder="form value" />
