--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -481,10 +481,17 @@
             &.option-img{
                 width: auto;                
                 max-width: 80px;
+                height: 50px;
+                background-repeat: no-repeat;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+                background-position: center center;
                 img{
                     width: auto;
                     max-width: 100%;
                     height: auto;
+                    max-height: 100%;
                 }
             }
         }
