--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8573,6 +8573,9 @@ p {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16);
   text-align: left;
+  width: 100%;
+}
+.alert.ngn {
   width: 60%;
   left: 50%;
   transform: translateX(-50%);
