--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -40,6 +40,8 @@ a
 .opacity-0
   opacity: 0  
 
+.white-bg
+  background: $white
 .primary-bg, .bg-primary
   background: $primary
 .secondary-bg, .bg-secondary
