--- a/components/index.html
+++ b/components/index.html
@@ -448,6 +448,15 @@
         <div class="row mt-20">
             <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-2">
                 <h4>Alerts</h4>
+                <div class="wd-100 text-center white-bg p-15">
+                    No results div
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-20">
+            <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-2">
+                <h4>Alerts</h4>
                 <div class="alert alert-orange alert-dismissible show" role="alert">
                     <i class="fa fa-info-circle"></i> Warning. Loading of this page taking a way too long.
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
