--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13217,24 +13217,24 @@ ul.simple-list li:last-of-type {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border: 1px solid #CED1DA;
-  padding: 5px 10px;
+  padding: 10px 20px;
   box-shadow: 0 2px 0px #C0C1C1;
   -webkit-box-shadow: 0 2px 0px #C0C1C1;
   -moz-box-shadow: 0 2px 0px #C0C1C1;
 }
 .pagination li a:hover, .pagination li a:focus {
   background: #B0B6BC !important;
-  border-color: #B0B6BC !important;
+  border: 1px solid #CED1DA !important;
   color: #fff !important;
 }
 .pagination li.active a, .pagination li.active a:hover, .pagination li.active a:focus {
   background: #B0B6BC !important;
-  border-color: #B0B6BC !important;
+  border: 1px solid #B0B6BC !important;
   color: #fff !important;
 }
 .pagination li.next a:focus, .pagination li.prev a:focus {
   color: #5B616A !important;
-  border-color: #B0B6BC !important;
+  border: 1px solid #CED1DA !important;
 }
 .pagination li:first-of-type i {
   margin-right: 8px;
