--- a/assets/sass/3-component/_alert.scss
+++ b/assets/sass/3-component/_alert.scss
@@ -52,6 +52,7 @@
     color: $white;
     opacity: 1;
     text-shadow: none;
+    display: block;
     &:hover{
         background: transparent;
     }
